--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.11.0
 django==6.0
 django-cors-headers==4.9.0
 django-debug-toolbar==6.1.0
+django-extensions==4.1
+django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1
 pillow==12.0.0
